k8s/3-media/4-plex.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker
        # image: plexinc/pms-docker:1.22.3.4523-d0ce30438
        # image: plexinc/pms-docker:1.23.6.4881-e2e58f321

        ports:
          - containerPort: 32400
        volumeMounts:
          - name: config
            mountPath: "/config"
          - name: transcode
            mountPath: "/transcode"
          - name: movies
            mountPath: "/movies"
          - name: series
            mountPath: "/series"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: transcode
        persistentVolumeClaim:
          claimName: plex-transcode
      - name: movies
        persistentVolumeClaim:
          claimName: nas-movies
      - name: series
        persistentVolumeClaim:
          claimName: nas-series
---
apiVersion: v1
kind: Service
metadata:
  namespace: media
  name: plex
  labels:
    app: plex
spec:
  type: NodePort
  selector:
    app: plex
  ports:
  - name: main
    port: 32400
    nodePort: 32400
    protocol: TCP
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
  # namespace: media
  # name: plex-tls
# spec:
  # entryPoints:
    # - websecure
  # routes:
  # - match: Host(`plex.olumpos.net`)
    # kind: Rule
    # services:
    # - name: plex
      # port: 32400
  # tls:
    # certResolver: letsencrypt
